feat: adding more alarm coverage (#796)