@@ -1,11 +1,19 @@
 package com.bigboxer23.solar_moon.alarm;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 import com.bigboxer23.solar_moon.data.Alarm;
+import com.bigboxer23.solar_moon.data.Device;
+import com.bigboxer23.solar_moon.data.DeviceData;
+import com.bigboxer23.solar_moon.data.LinkedDevice;
+import com.bigboxer23.solar_moon.device.DeviceComponent;
+import com.bigboxer23.solar_moon.device.DeviceUpdateComponent;
+import com.bigboxer23.solar_moon.maintenance.MaintenanceComponent;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -15,10 +23,19 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-public class AlarmComponentTest {
+public class AlarmComponentTest implements IAlarmConstants {
 
 	@Mock
 	private AlarmRepository mockRepository;
+
+	@Mock
+	private DeviceComponent mockDeviceComponent;
+
+	@Mock
+	private DeviceUpdateComponent mockDeviceUpdateComponent;
+
+	@Mock
+	private MaintenanceComponent mockMaintenanceComponent;
 
 	private TestableAlarmComponent alarmComponent;
 
@@ -30,20 +47,51 @@ public class AlarmComponentTest {
 
 	private static class TestableAlarmComponent extends AlarmComponent {
 		private final AlarmRepository repository;
+		private final DeviceComponent deviceComponent;
+		private final DeviceUpdateComponent deviceUpdateComponent;
+		private final MaintenanceComponent maintenanceComponent;
 
-		public TestableAlarmComponent(AlarmRepository repository) {
+		public TestableAlarmComponent(
+				AlarmRepository repository,
+				DeviceComponent deviceComponent,
+				DeviceUpdateComponent deviceUpdateComponent,
+				MaintenanceComponent maintenanceComponent) {
 			this.repository = repository;
+			this.deviceComponent = deviceComponent;
+			this.deviceUpdateComponent = deviceUpdateComponent;
+			this.maintenanceComponent = maintenanceComponent;
 		}
 
 		@Override
 		protected AlarmRepository getRepository() {
 			return repository;
 		}
+
+		@Override
+		protected DeviceComponent getDeviceComponent() {
+			return deviceComponent;
+		}
+
+		@Override
+		protected DeviceUpdateComponent getDeviceUpdateComponent() {
+			return deviceUpdateComponent;
+		}
+
+		@Override
+		protected MaintenanceComponent getMaintenanceComponent() {
+			return maintenanceComponent;
+		}
+
+		@Override
+		protected Optional<LinkedDevice> isLinkedDeviceErrored(DeviceData deviceData, Device device) {
+			return Optional.empty();
+		}
 	}
 
 	@BeforeEach
 	void setUp() {
-		alarmComponent = new TestableAlarmComponent(mockRepository);
+		alarmComponent = new TestableAlarmComponent(
+				mockRepository, mockDeviceComponent, mockDeviceUpdateComponent, mockMaintenanceComponent);
 	}
 
 	@Test
@@ -60,7 +108,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testFindAlarmsByDevice_delegatesToRepository() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findAlarmsByDevice(CUSTOMER_ID, DEVICE_ID)).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.findAlarmsByDevice(CUSTOMER_ID, DEVICE_ID);
@@ -71,7 +119,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testFindAlarmsBySite_delegatesToRepository() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findAlarmsBySite(CUSTOMER_ID, SITE_ID)).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.findAlarmsBySite(CUSTOMER_ID, SITE_ID);
@@ -82,7 +130,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testFindNonEmailedAlarms_delegatesToRepository() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findNonEmailedAlarms(CUSTOMER_ID)).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.findNonEmailedAlarms(CUSTOMER_ID);
@@ -93,7 +141,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testFindNonEmailedActiveAlarms_delegatesToRepository() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findNonEmailedActiveAlarms()).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.findNonEmailedActiveAlarms();
@@ -104,7 +152,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testFindNonEmailedResolvedAlarms_delegatesToRepository() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findNonEmailedResolvedAlarms()).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.findNonEmailedResolvedAlarms();
@@ -115,7 +163,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testGetAlarms_delegatesToRepository() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findAlarms(CUSTOMER_ID)).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.getAlarms(CUSTOMER_ID);
@@ -138,7 +186,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testGetActiveAlarms_delegatesToRepository() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findActiveAlarms()).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.getActiveAlarms();
@@ -238,7 +286,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testFilterAlarms_withDeviceId_returnsDeviceAlarms() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findAlarmsByDevice(CUSTOMER_ID, DEVICE_ID)).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.filterAlarms(CUSTOMER_ID, SITE_ID, DEVICE_ID);
@@ -250,7 +298,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testFilterAlarms_withSiteIdOnly_returnsSiteAlarms() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findAlarmsBySite(CUSTOMER_ID, SITE_ID)).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.filterAlarms(CUSTOMER_ID, SITE_ID, "");
@@ -262,7 +310,7 @@ public class AlarmComponentTest {
 
 	@Test
 	void testFilterAlarms_withOnlyCustomerId_returnsAllCustomerAlarms() {
-		List<Alarm> expectedAlarms = Arrays.asList(createTestAlarm());
+		List<Alarm> expectedAlarms = List.of(createTestAlarm());
 		when(mockRepository.findAlarms(CUSTOMER_ID)).thenReturn(expectedAlarms);
 
 		List<Alarm> result = alarmComponent.filterAlarms(CUSTOMER_ID, "", "");
@@ -313,10 +361,247 @@ public class AlarmComponentTest {
 		verify(mockRepository, never()).delete(any(Alarm.class));
 	}
 
+	@Test
+	void testResolveActiveAlarms_withOldData_doesNotResolveAlarm() {
+		DeviceData oldData = new DeviceData();
+		oldData.setDate(new Date(System.currentTimeMillis() - 2 * 60 * 60 * 1000));
+		oldData.setDeviceId(DEVICE_ID);
+
+		alarmComponent.resolveActiveAlarms(oldData);
+
+		verify(mockRepository, never()).findMostRecentAlarm(anyString());
+		verify(mockRepository, never()).update(any(Alarm.class));
+	}
+
+	@Test
+	void testResolveActiveAlarms_withNullDate_doesNotResolveAlarm() {
+		DeviceData deviceData = new DeviceData();
+		deviceData.setDate(null);
+		deviceData.setDeviceId(DEVICE_ID);
+
+		alarmComponent.resolveActiveAlarms(deviceData);
+
+		verify(mockRepository, never()).findMostRecentAlarm(anyString());
+	}
+
+	@Test
+	void testResolveActiveAlarms_withNoActiveAlarm_doesNothing() {
+		DeviceData deviceData = createValidDeviceData();
+		when(mockRepository.findMostRecentAlarm(DEVICE_ID)).thenReturn(Optional.empty());
+
+		alarmComponent.resolveActiveAlarms(deviceData);
+
+		verify(mockDeviceUpdateComponent).update(DEVICE_ID);
+		verify(mockRepository).findMostRecentAlarm(DEVICE_ID);
+		verify(mockRepository, never()).update(any(Alarm.class));
+	}
+
+	@Test
+	void testResolveActiveAlarms_withResolvedAlarm_doesNothing() {
+		DeviceData deviceData = createValidDeviceData();
+		Alarm resolvedAlarm = createTestAlarm();
+		resolvedAlarm.setState(RESOLVED);
+		when(mockRepository.findMostRecentAlarm(DEVICE_ID)).thenReturn(Optional.of(resolvedAlarm));
+
+		alarmComponent.resolveActiveAlarms(deviceData);
+
+		verify(mockDeviceUpdateComponent).update(DEVICE_ID);
+		verify(mockRepository).findMostRecentAlarm(DEVICE_ID);
+		verify(mockRepository, never()).update(any(Alarm.class));
+	}
+
+	@Test
+	void testResolveActiveAlarms_notDaylightAndNotNoDataAlarm_doesNotResolve() {
+		DeviceData deviceData = createValidDeviceData();
+		deviceData.setDaylight(false);
+		Alarm activeAlarm = createTestAlarm();
+		activeAlarm.setMessage("Some other error");
+		when(mockRepository.findMostRecentAlarm(DEVICE_ID)).thenReturn(Optional.of(activeAlarm));
+
+		alarmComponent.resolveActiveAlarms(deviceData);
+
+		verify(mockDeviceUpdateComponent).update(DEVICE_ID);
+		verify(mockRepository, never()).update(any(Alarm.class));
+	}
+
+	@Test
+	void testResolveActiveAlarms_noPowerAndNotNoDataAlarm_doesNotResolve() {
+		DeviceData deviceData = createValidDeviceData();
+		deviceData.setTotalRealPower(0.0f);
+		Alarm activeAlarm = createTestAlarm();
+		activeAlarm.setMessage("Some other error");
+		when(mockRepository.findMostRecentAlarm(DEVICE_ID)).thenReturn(Optional.of(activeAlarm));
+
+		alarmComponent.resolveActiveAlarms(deviceData);
+
+		verify(mockDeviceUpdateComponent).update(DEVICE_ID);
+		verify(mockRepository, never()).update(any(Alarm.class));
+	}
+
+	@Test
+	void testResolveActiveAlarms_withNoDataAlarm_resolvesAlarm() {
+		DeviceData deviceData = createValidDeviceData();
+		Alarm activeAlarm = createTestAlarm();
+		activeAlarm.setMessage(NO_DATA_RECENTLY + "12345");
+		activeAlarm.setEmailed(NEEDS_EMAIL);
+		when(mockRepository.findMostRecentAlarm(DEVICE_ID)).thenReturn(Optional.of(activeAlarm));
+		when(mockRepository.update(any(Alarm.class))).thenReturn(Optional.of(activeAlarm));
+
+		alarmComponent.resolveActiveAlarms(deviceData);
+
+		verify(mockDeviceUpdateComponent).update(DEVICE_ID);
+		verify(mockRepository)
+				.update(argThat(alarm -> alarm.getState() == RESOLVED
+						&& alarm.getEmailed() == RESOLVED_NOT_EMAILED
+						&& alarm.getEndDate() > 0));
+	}
+
+	@Test
+	void testResolveActiveAlarms_withEmailedAlarm_setsResolveEmailFlag() {
+		DeviceData deviceData = createValidDeviceData();
+		Alarm activeAlarm = createTestAlarm();
+		activeAlarm.setEmailed(System.currentTimeMillis());
+		when(mockRepository.findMostRecentAlarm(DEVICE_ID)).thenReturn(Optional.of(activeAlarm));
+		when(mockRepository.update(any(Alarm.class))).thenReturn(Optional.of(activeAlarm));
+
+		alarmComponent.resolveActiveAlarms(deviceData);
+
+		verify(mockDeviceUpdateComponent).update(DEVICE_ID);
+		verify(mockRepository).update(argThat(alarm -> alarm.getResolveEmailed() == NEEDS_EMAIL));
+	}
+
+	@Test
+	void testFaultDetected_withNoExistingAlarm_createsNewFaultAlarm() {
+		String content = "Device fault detected";
+		when(mockRepository.findAlarmsByDevice(CUSTOMER_ID, DEVICE_ID)).thenReturn(Collections.emptyList());
+		when(mockRepository.update(any(Alarm.class))).thenAnswer(invocation -> Optional.of(invocation.getArgument(0)));
+		when(mockDeviceComponent.findDeviceById(DEVICE_ID, CUSTOMER_ID)).thenReturn(Optional.empty());
+
+		Optional<Alarm> result = alarmComponent.faultDetected(CUSTOMER_ID, DEVICE_ID, SITE_ID, content);
+
+		assertTrue(result.isPresent());
+		verify(mockRepository)
+				.update(argThat(alarm -> alarm.getEmailed() == DONT_EMAIL
+						&& alarm.getState() == ACTIVE
+						&& alarm.getMessage().equals(content)));
+	}
+
+	@Test
+	void testFaultDetected_withExistingActiveAlarm_updatesAlarm() {
+		String content = "Device fault detected";
+		Alarm existingAlarm = createTestAlarm();
+		existingAlarm.setEmailed(DONT_EMAIL);
+		when(mockRepository.findAlarmsByDevice(CUSTOMER_ID, DEVICE_ID)).thenReturn(List.of(existingAlarm));
+		when(mockRepository.update(any(Alarm.class))).thenAnswer(invocation -> Optional.of(invocation.getArgument(0)));
+
+		Optional<Alarm> result = alarmComponent.faultDetected(CUSTOMER_ID, DEVICE_ID, SITE_ID, content);
+
+		assertTrue(result.isPresent());
+		verify(mockRepository)
+				.update(argThat(alarm -> alarm.getAlarmId().equals(ALARM_ID) && alarm.getLastUpdate() > 0));
+	}
+
+	@Test
+	void testAlarmConditionDetected_withNoExistingAlarm_createsNewAlarm() {
+		String content = "Alarm condition detected";
+		when(mockRepository.findAlarmsByDevice(CUSTOMER_ID, DEVICE_ID)).thenReturn(Collections.emptyList());
+		when(mockRepository.update(any(Alarm.class))).thenAnswer(invocation -> Optional.of(invocation.getArgument(0)));
+
+		Optional<Alarm> result = alarmComponent.alarmConditionDetected(CUSTOMER_ID, DEVICE_ID, SITE_ID, content);
+
+		assertTrue(result.isPresent());
+		verify(mockRepository)
+				.update(argThat(alarm -> alarm.getState() == ACTIVE
+						&& alarm.getMessage().equals(content)
+						&& alarm.getEmailed() == NEEDS_EMAIL));
+	}
+
+	@Test
+	void testAlarmConditionDetected_withExistingFaultAlarm_upgradesToEmailAlarm() {
+		String content = "Alarm condition detected";
+		Alarm existingFault = createTestAlarm();
+		existingFault.setEmailed(DONT_EMAIL);
+		existingFault.setMessage("");
+		when(mockRepository.findAlarmsByDevice(CUSTOMER_ID, DEVICE_ID)).thenReturn(List.of(existingFault));
+		when(mockRepository.update(any(Alarm.class))).thenAnswer(invocation -> Optional.of(invocation.getArgument(0)));
+
+		Optional<Alarm> result = alarmComponent.alarmConditionDetected(CUSTOMER_ID, DEVICE_ID, SITE_ID, content);
+
+		assertTrue(result.isPresent());
+		verify(mockRepository)
+				.update(argThat(alarm ->
+						alarm.getEmailed() == NEEDS_EMAIL && alarm.getMessage().equals(content)));
+	}
+
+	@Test
+	void testGetNewAlarm_createsAlarmWithCorrectProperties() {
+		String content = "Test alarm content";
+
+		Alarm result = alarmComponent.getNewAlarm(CUSTOMER_ID, DEVICE_ID, SITE_ID, content);
+
+		assertNotNull(result);
+		assertEquals(CUSTOMER_ID, result.getCustomerId());
+		assertEquals(DEVICE_ID, result.getDeviceId());
+		assertEquals(SITE_ID, result.getSiteId());
+		assertEquals(content, result.getMessage());
+		assertEquals(ACTIVE, result.getState());
+		assertEquals(NEEDS_EMAIL, result.getEmailed());
+		assertTrue(result.getStartDate() > 0);
+		assertNotNull(result.getAlarmId());
+	}
+
+	@Test
+	void testCleanupOldAlarms_deletesOldResolvedAndActiveAlarms() {
+		Alarm oldResolvedAlarm = createTestAlarm();
+		oldResolvedAlarm.setState(RESOLVED);
+		Alarm oldActiveAlarm = createTestAlarm();
+		oldActiveAlarm.setAlarmId("alarm-456");
+		oldActiveAlarm.setState(ACTIVE);
+
+		when(mockRepository.findAlarmsByStateAndDateLessThan(eq(RESOLVED), anyLong()))
+				.thenReturn(List.of(oldResolvedAlarm));
+		when(mockRepository.findAlarmsByStateAndDateLessThan(eq(ACTIVE), anyLong()))
+				.thenReturn(List.of(oldActiveAlarm));
+
+		alarmComponent.cleanupOldAlarms();
+
+		verify(mockRepository).findAlarmsByStateAndDateLessThan(eq(RESOLVED), anyLong());
+		verify(mockRepository).findAlarmsByStateAndDateLessThan(eq(ACTIVE), anyLong());
+		verify(mockRepository, times(2)).delete(any(Alarm.class));
+	}
+
+	@Test
+	void testCleanupOldAlarms_withNoOldAlarms_doesNotDelete() {
+		when(mockRepository.findAlarmsByStateAndDateLessThan(anyInt(), anyLong()))
+				.thenReturn(Collections.emptyList());
+
+		alarmComponent.cleanupOldAlarms();
+
+		verify(mockRepository, never()).delete(any(Alarm.class));
+	}
+
+	@Test
+	void testIsLinkedDeviceErrored_withNullDeviceData_returnsEmpty() {
+		Optional<LinkedDevice> result = alarmComponent.isLinkedDeviceErrored(null, null);
+
+		assertFalse(result.isPresent());
+	}
+
+	private DeviceData createValidDeviceData() {
+		DeviceData deviceData = new DeviceData();
+		deviceData.setDeviceId(DEVICE_ID);
+		deviceData.setCustomerId(CUSTOMER_ID);
+		deviceData.setSiteId(SITE_ID);
+		deviceData.setDate(new Date());
+		deviceData.setDaylight(true);
+		deviceData.setTotalRealPower(5.0f);
+		return deviceData;
+	}
+
 	private Alarm createTestAlarm() {
 		Alarm alarm = new Alarm(ALARM_ID, CUSTOMER_ID, DEVICE_ID, SITE_ID);
 		alarm.setMessage(MESSAGE);
-		alarm.setState(IAlarmConstants.ACTIVE);
+		alarm.setState(ACTIVE);
 		alarm.setStartDate(System.currentTimeMillis());
 		return alarm;
 	}
